# surface_processing

./: Dockerfile  README.md  example_command.py  example_script.py  generate_mesh.py  pyproject.toml  requirements.txt  setup.py
util/: generate_mesh.py  tca.py
